<resources>
    <string name="preference_string">SwiftAddressPreferences</string>
    <string name="app_name">SwiftAddress</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num10">0</string>
    <string name="num0">0</string>
    <string name="B1_R0">B1 R0</string>
    <string name="B2_R0">B2 R0</string>
    <string name="B3_R0">B3 R0</string>
    <string name="B1_R1">B1 R1</string>
    <string name="B2_R1">B2 R1</string>
    <string name="B3_R1">B3 R1</string>
    <string name="osm_background_imagery">Use Openstreetmap as background imagery</string>
    <string name="pt_background_imagery_TEMP">Use public transport as background imagery</string>
    <string name="save_note">Save Note</string>
    <string name="cancel">Cancel</string>
    <string name="add_note">Add Note</string>
    <string name="unimplemented">This feature has not been implemented yet.</string>
    <string name="need_storage_permission">This app needs the storage permission in order to store any data.</string>
    <string name="ok_button">OK</string>
    <string name="storage_permission_denied">Storage Permission Denied</string>
    <string name="location_permission_denied">Location Permission Denied</string>
    <string name="choose_location_permission_info">Do you want to disable location? While it is possible to survey without your location on the map, it will be more difficult.</string>
    <string name="request_location_permission_again_button">Request Permission Again</string>
    <string name="deny_location_permission_button">Deny Permission</string>
    <string name="street_name">Street Name:</string>
    <string name="building_levels">Building Levels:</string>
    <string name="remember_change_street_name">Remember to change the Street Name every time you move to a new street.</string>
    <string name="change_street_name_button">Change Street name</string>
    <string name="give_storage_permission">Please grant storage permissions first.</string>
    <string name="change_increment">Change Increment</string>
    <string name="increment_not_integer">Increment given wasn\'t an integer.</string>
    <string name="increment_explanation">Change the default increment used when long pressing on an arrow. For example, if your increment is 2, and the last housenumber on the left side you added was \'24\', then long pressing the left arrow will add \'26\' because that is 2 higher than the previous number.</string>
    <string name="increment_value">increment_value</string>
    <string name="save_increment">Save Increment</string>
    <string name="osm_files_empty">No data to save</string>
    <string name="location_not_found">Location is not available</string>
    <string name="left_side">LEFT SIDE</string>
    <string name="right_side">RIGHT SIDE</string>
    <string name="add_address_first">Please add an address first</string>
    <string name="save_or_share_data">Do you want to share the data or save it to storage?</string>
    <string name="save">Save</string>
    <string name="share_data">Share</string>
    <string name="save_data_question">Are you sure you want to save?</string>
    <string name="delete">Delete</string>
    <string name="delete_image">Delete Image</string>
    <string name="delete_image_question">Are you sure you want to delete an image?</string>
    <string name="modify_building_levels">Modify Building Levels</string>
    <string name="building_levels_question">What are the building levels of this address?</string>
    <string name="building_levels_hint">Building Levels</string>
    <string name="roof_levels_hint">Roof Levels</string>
    <string name="saving_files">Saving Files</string>
    <string name="failed_save">Data failed to save</string>
    <string name="move">Move</string>
    <string name="no_markers">You haven\'t added any markers.</string>
    <string name="recover_data">Recover Data</string>
    <string name="save_data">Save data</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="no_saved_data">No saved data exists.</string>
    <string name="recover">Recover</string>
    <string name="upload_to_osm">Upload to OSM</string>
    <string name="recover_data_message">Do you want to recover the data that you saved last time? This will add the notes and addresses from before you saved the map. CURRENT DATA WILL BE DELETED. Images will not be recovered. The saved zip file won\'t be deleted.</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="other">Other</string>
    <string name="stop_screen_timeout_desc">Stop the screen from turning off when SwiftAddress is open.</string>
    <string name="prevent_screen_timeout_title">Prevent Screen Timeout</string>
    <string name="user_interface">User Interface</string>
    <string name="compass_unavailable">Compass not available</string>
    <string name="choose_UI">Choose User Interface</string>
    <string name="no_camera_app">No camera application available</string>
    <string name="choose_background_imagery">Choose Background Imagery</string>
    <string name="mapbox_satellite">Mapbox Satellite</string>
    <string name="osm_carto">Default - OSM Carto</string>
    <string name="change_imagery">Change Imagery</string>
    <string name="custom_imagery">Custom Imagery</string>
    <string name="custom_slippy_url">Add a custom Slippy Map URL</string>
    <string name="bing_satellite">Bing Satellite</string>
    <string name="esri_satellite">Esri Satellite</string>
    <string name="data_preferences">Data</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clear_cache_question">Are you sure you want to clear map cache? Maps won\'t reload unless you have internet.</string>
    <string name="no_copyrighted_material">WARNING! Do not use copyrighted imagery! Only use imagery that is available to OSM!</string>
    <string name="invalid_imagery">Invalid Custom Imagery</string>
    <string name="SwiftAddress">SwiftAddress</string>
    <string name="version_string">Version 0.3.0</string>
    <string name="add_point">Add Point</string>
    <string name="interpolate">Inter-
        polate</string>
    <string name="finish_interpolation">Finish Interpolation</string>
    <string name="housenumber">Housenumber:</string>
    <string name="addr_interpolation">addr:interpolation (Required)</string>
    <string name="addr_inclusion">addr:inclusion (Optional)</string>
    <string name="please_wait">Please wait…</string>
    <string name="modify_offset">Modify Offset</string>
    <string name="offset_not_integer">Offset given wasn\'t an integer</string>
    <string name="save_offset">Change Offset</string>
    <string name="change_offset">Change Offset</string>
    <string name="offset_message">This is the distance that the housenumber is offset from your current location. Your compass is used to determine what direction the housenumber should be offsetted in.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="download_tiles">Download Tiles</string>
    <string name="download">Download</string>
    <string name="map_too_large">The map is too large. Zoom in to download tiles.</string>
    <string name="map_good_size">Map is small enough. You can download tiles.</string>
    <string name="current_imagery">Current Imagery:</string>
    <string name="choose_area">Choose Area</string>
    <string name="downloading_tiles_not_supported">Warning: Downloading tiles is not supported for this imagery.</string>
    <string name="osm_carto_imagery">Osm Carto</string>
    <string name="mapbox_satellite_imagery">Mapbox Satellite</string>
    <string name="esri_satellite_imagery">Esri Satellite</string>
    <string name="bing_satellite_imagery">Bing Satellite</string>
    <string name="custom_imagery_text">Custom</string>
    <string name="save_changes">Save Changes</string>
    <string name="data_saved">Data Saved</string>
    <string name="addresses_saved">Addresses saved:</string>
    <string name="notes_saved">Notes saved:</string>
    <string name="images_saved">Images saved:</string>
    <string name="note">Note:</string>
    <string name="disable_reverse_geocoding">Remember address\n(this disables Reverse Geocoding)</string>
    <string name="interpolation">Interpolation:</string>
    <string name="inclusion">Inclusion:</string>
    <string name="first_house_number">First House Number:</string>
    <string name="last_house_number">Last House Number:</string>
    <string name="house_name">House Name:</string>
    <string name="add_house_name">Add House Name</string>
    <string name="change_building_levels">Change Building Levels</string>
    <string name="modify_street_name">Modify Street Name</string>
    <string name="please_enter_number">Please enter a number</string>
    <string name="letter_a_lowercase">a</string>
    <string name="letter_b_lowercase">b</string>
    <string name="letter_c_lowercase">c</string>
    <string name="letter_d_lowercase">d</string>
    <string name="letter_e_lowercase">e</string>
    <string name="letter_f_lowercase">f</string>
    <string name="letter_a_uppercase">A</string>
    <string name="letter_b_uppercase">B</string>
    <string name="letter_c_uppercase">C</string>
    <string name="letter_d_uppercase">D</string>
    <string name="letter_e_uppercase">E</string>
    <string name="letter_f_uppercase">F</string>
    <string name="uppercase_letters_used">Uppercase letters will be used in the keypad.</string>
    <string name="lowercase_letters_used">Lowercase letters will be used in the keypad.</string>
    <string name="uppercase_letters_title">Use Uppercase Letters</string>
    <string name="clear_cache_title">Clear Cache</string>
    <string name="clear_cache_description">Clear all the map cache. This will clear up some space on your device.</string>
    <string name="no_quotation_marks">Can\'t contain quotation marks</string>
    <string name="download_house_numbers">Download House Numbers</string>
    <string name="delete_downloaded_address_message">Are you sure you want to delete this address? This will remove it from OpenStreetMap if you upload your changes.</string>
    <string name="delete_downloaded_address_title">Delete Address</string>
    <string name="download_addresses">Download Addresses</string>
    <string name="downloading_addresses">Downloading Addresses</string>
    <string name="right_side_abbreviation">R:</string>
    <string name="left_side_abbreviation">L:</string>
    <string name="forward_side_abbreviation">F:</string>
    <string name="online_api_used_message">Online APIs such as Overpass API and Nominatim will be used to find the name of nearby streets.</string>
    <string name="online_api_not_used_message">Online APIs such as Overpass API and Nominatim will not be used.</string>
    <string name="failed_add_image">Failed to add image</string>
    <string name="no_location">Location not available</string>
</resources>