<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/user_interface">

        <ListPreference
            app:defaultValue="Default"
            app:entries="@array/change_UI"
            app:entryValues="@array/change_UI_values"
            app:key="interface"
            app:title="@string/choose_UI"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="screen_timeout"
            app:title="@string/prevent_screen_timeout"
            app:summary="@string/stop_screen_timeout_desc"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/data_preferences">
        <Preference
            android:title="Clear Cache"
            android:summary="Clear all the map cache. This will clear up some space on your device."
            android:key="clear_cache">
        </Preference>
    </PreferenceCategory>


</PreferenceScreen>