<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BackgroundImagery.BackgroundImageryFragment">

    <Button
        android:id="@+id/save_background_imagery_changes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/save_changes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/choose_background_imagery_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/choose_background_imagery"
        android:textColor="@color/button_colors"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/current_imagery_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/current_imagery_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/current_imagery"
        android:textColor="@color/button_colors"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/choose_background_imagery_title" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/change_background_imagery_card_view"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@+id/current_imagery_text_view"
        tools:layout_editor_absoluteX="16dp">

        <FrameLayout
            android:id="@+id/change_background_imagery_frame_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <ImageView
                android:id="@+id/imagery_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/osm_carto" />
        </FrameLayout>
        <!-- app:srcCompat="@drawable/osm_carto" -->
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/download_tiles_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/download_tiles"
        android:textColor="@color/button_colors"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_background_imagery_card_view" />

    <Button
        android:id="@+id/choose_area_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/choose_area"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/download_tiles_title" />

    <TextView
        android:id="@+id/cant_download_tiles_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/downloading_tiles_not_supported"
        android:textColor="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_area_button" />

</androidx.constraintlayout.widget.ConstraintLayout>